data/derived/comb/progs/unify/prog5320.ml.out
Characters 70-75:
  a@(0,x)
    ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
